--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .card {
-  max-width: 375px;
+  max-width: 280px;
   text-align: center;
   background-color: hsl(0, 0%, 100%);
   padding: 20px 20px;
@@ -27,6 +27,7 @@ h1 {
   color: hsl(218, 44%, 22%);
   padding-left: 5px;
   padding-right: 5px;
+  font-size: 23px;
 }
 
 p {
